<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kindr_ros</name>
  <version>0.3.4</version>
  <description>The kindr_ros package</description>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/anybotics/kindr_ros</url>

  <author email="cgehring@anybotics.com">Christian Gehring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kindr</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <build_export_depend>eigen</build_export_depend>

  <test_depend>gtest</test_depend>
</package>
