<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>kindr_ros</name>
  <version>0.3.22</version>
  <description>The kindr_ros package</description>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/kindr_ros</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>geometry_msgs</depend>
  <depend>kindr</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>
  <depend condition="$ROS_VERSION == 2">tf2</depend>
  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
<!--   <test_depend condition="$ROS_VERSION == 1">cmake_code_coverage</test_depend> -->
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
