<?xml version="1.0"?>
<package>
  <name>kindr_rviz_plugins</name>
  <version>0.0.1</version>
  <description>
     Plugins for visualizing kindr objects in rviz. 
  </description>
  <maintainer email="diethelm@mavt.ethz.ch">Remo Diethelm</maintainer>
  <license>BSD</license>

  <url>none</url>
  <author>Remo Diethelm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>kindr_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>kindr_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
