<?xml version="1.0"?>
<package format="2">
  <name>kindr_rviz_plugins</name>
  <version>0.2.1</version>
  <description>
     Plugins for visualizing kindr objects in rviz. 
  </description>
  <maintainer email="diethelm@mavt.ethz.ch">Remo Diethelm</maintainer>
  <license>BSD</license>

  <url>none</url>
  <author>Remo Diethelm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>kindr_msgs</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
