<?xml version="1.0"?>
<package>
  <name>multi_dof_joint_trajectory_rviz_plugins</name>
  <version>0.0.1</version>
  <description>
     Plugins for visualizing trajectory_msgs/MultiDOFJointTrajectory in rviz. 
  </description>
  <maintainer email="diethelm@mavt.ethz.ch">Remo Diethelm</maintainer>
  <license>BSD</license>

  <url>none</url>
  <author>Remo Diethelm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
