<?xml version="1.0"?>
<package format="2">
  <name>multi_dof_joint_trajectory_rviz_plugins</name>
  <version>0.3.1</version>
  <description>Plugins for visualizing trajectory_msgs/MultiDOFJointTrajectory in rviz.</description>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/kindr_ros</url>

  <url>none</url>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>trajectory_msgs</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
